--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-python-upstream-ontologist (0.2.0-2) UNRELEASED; urgency=medium
+python-upstream-ontologist (0.2.2-2) UNRELEASED; urgency=medium
 
   * Merge release 0.2.2.
+    + Fixes build. Closes: #1088444
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 20 Dec 2024 13:03:29 +0000
 
