--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+python-upstream-ontologist (0.2.4-2) unstable; urgency=medium
+
+  * Team Upload
+  * Add d/gbp.conf
+  * Fix Vcs urls
+  * Drop recommends on python3-toml
+
+ -- Alexandre Detiste <tchet@debian.org>  Mon, 28 Jul 2025 11:54:21 +0200
+
 python-upstream-ontologist (0.2.4-1) unstable; urgency=medium
 
   * New upstream release.
