Fixes compatibility with newer PyO3. Closes: #1118300

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-upstream-ontologist (0.2.7-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+   + Fixes compatibility with newer PyO3. Closes: #1118300
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 04 Nov 2025 20:40:41 +0000
 
