--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-upstream-ontologist (0.2.7-1) UNRELEASED; urgency=medium
+python-upstream-ontologist (0.2.7-1) experimental; urgency=medium
 
   * New upstream release.
    + Fixes compatibility with newer PyO3. Closes: #1118300
