--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-upstream-ontologist (0.2.7-2) UNRELEASED; urgency=medium
+
+  * Drop unnecessary dependencies.
+
+ -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 12 Nov 2025 01:58:50 +0000
+
 python-upstream-ontologist (0.2.7-1) experimental; urgency=medium
 
   * New upstream release.
